# AdvancedVision2025

src/config/: config.yaml
src/identify/: CMakeLists.txt  package.xml
src/identify/include/: identify.hpp
src/identify/src/: identify.cpp  main.cpp
src/launch/: CMakeLists.txt  launch.py  ui_test.py
src/measure/: CMakeLists.txt  package.xml
src/measure/src/: main.cpp  measure.cpp
src/nn_calculator/: CMakeLists.txt  package.xml
src/nn_calculator/include/nn_calculator/: identify_mode.hpp  measure_mode.hpp  mode_base.hpp  nn_calculator.hpp  nn_detector.hpp
src/nn_calculator/src/: identify_mode.cpp  main.cpp  measure_mode.cpp  nn_calculator.cpp  nn_detector.cpp
src/py_temp/: indentify.py
src/ros_msg/: CMakeLists.txt  package.xml
src/ros_msg/msg/: CalculationData.msg  Detection.msg  NnResult.msg
src/ros_msgs/: CMakeLists.txt  package.xml
src/ros_msgs/msg/: CameraData.msg  Log.msg
src/vision_system/: CMakeLists.txt  package.xml
src/vision_system/include/vision_system/: system_node.hpp  vision_system.hpp
src/vision_system/launch/: vision_system.launch.py
src/vision_system/src/: main.cpp  system_node.cpp  vision_system.cpp
src/vision_utils/: CMakeLists.txt  config.yaml  package.xml  vision_utils.hpp
src/vision_utils/config/: config.yaml
src/vision_utils/model/: CMakeLists.txt  package.xml
src/vision_utils/model/include/: fastsam.hpp  model_base.hpp  ocr_detector.hpp  segformer.hpp
src/vision_utils/model/src/: fastsam.cpp  ocr_detector.cpp  segformer.cpp
src/vision_utils/utils/: CMakeLists.txt  package.xml
src/vision_utils/utils/include/: acl_utils.hpp  vision_utils.hpp
